Created custom exceptions & fixed response codes